--- a/package.json
+++ b/package.json
@@ -30,11 +30,20 @@
   },
   "homepage": "https://github.com/ReactJS-BA/blog#readme",
   "dependencies": {
+    "@zeit/next-css": "^0.2.0",
+    "antd": "^3.5.3",
+    "babel-plugin-import": "^1.7.0",
+    "babel-plugin-styled-components": "^1.5.1",
     "express": "^4.16.3",
     "next": "^6.0.3",
+    "next-manifest": "^1.5.0",
+    "next-workbox": "^1.4.1",
     "nodemon": "^1.17.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "styled-components": "^3.2.6"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
