--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "sitio de la comunidad de reactjs en buenos aires",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -w server.js server.js",
+    "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -30,20 +30,12 @@
   },
   "homepage": "https://github.com/ReactJS-BA/blog#readme",
   "dependencies": {
-    "@zeit/next-css": "^0.2.0",
-    "antd": "^3.5.3",
-    "babel-plugin-import": "^1.7.0",
-    "babel-plugin-styled-components": "^1.5.1",
-    "express": "^4.16.3",
-    "next": "^6.0.3",
-    "next-manifest": "^1.5.0",
-    "next-workbox": "^1.4.1",
-    "nodemon": "^1.17.5",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "styled-components": "^3.2.6"
+    "next": "9.3.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "styled-components": "5.0.1"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
+    "babel-plugin-styled-components": "1.10.7"
   }
 }
